# ezbpf

./: .gitignore  Cargo.toml  Makefile  Readme.md  package.json
crates/ezbpf-cli/: Cargo.toml
crates/ezbpf-cli/src/: main.rs
crates/ezbpf-core/: Cargo.toml
crates/ezbpf-core/src/: cursor.rs  elf_header.rs  errors.rs  instructions.rs  lib.rs  opcodes.rs  program.rs  program_header.rs  section_header.rs  section_header_entry.rs
crates/ezbpf-wasm/: Cargo.toml
crates/ezbpf-wasm/src/: lib.rs
tests/: program.spec.ts
wasm/bundler/: ezbpf_wasm.js  ezbpf_wasm_bg.js  ezbpf_wasm_bg.wasm  package.json
wasm/node/: ezbpf_wasm.d.ts  ezbpf_wasm.js  ezbpf_wasm_bg.wasm  ezbpf_wasm_bg.wasm.d.ts  package.json
wasm/web/: ezbpf_wasm.d.ts  ezbpf_wasm.js  ezbpf_wasm_bg.wasm  ezbpf_wasm_bg.wasm.d.ts  package.json
