[package]
name = "ezbpf-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Dean Little <@deanmlittle>"]

[lib]
name = "ezbpf_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
wasm-bindgen = "0.2.92"
hex = "0.4.3"
ezbpf-core = { path = "../ezbpf-core" }
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"

[dev-dependencies]
hex-literal = "0.4.1"